public/css/frontend/style.css
/* ... */
.alignright {
  display: inline;
  float: right;
  margin-left: 3.5em;
}

.aligncenter {
  clear: both;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

/*------------------------------
	3.0 Clearings
------------------------------*/
.clear:before,
.clear:after,
.entry-content:before,
.entry-content:after,
.comment-content:before,
.comment-content:after,
.site-header:before,
.site-header:after,
.site-content:before,
.site-content:after,
.site-footer:before,
.site-footer:after {
  content: "";
  display: table;
  clear: both;
}

.clear:after,
.entry-content:after,
.comment-content:after,
.site-header:after,
.site-content:after,
.site-footer:after {
  clear: both;
}

/*------------------------------
	3.1 Infinite Scroll
------------------------------*/
/* Globally hidden elements when Infinite Scroll is supported and in use. */
.infinite-scroll .posts-navigation,
.infinite-scroll.neverending .site-footer {
  /* Theme Footer (when set to scrolling) */
  display: none;
}

/* When Infinite Scroll has reached its end we need to re-display elements that were hidden (via .neverending) before. */
.infinity-end.neverending .site-footer {
  display: block;
}

/*------------------------------
	3.1 Helper.
------------------------------*/
.hide {
  display: none;
}

.clearleft {
  clear: left;
}

.break, h1,
h2,
h3,
h4,
h5,
h6, p, ul, ol, dl, blockquote, pre {
  word-break: break-word;
  word-wrap: break-word;
}

/*--------------------------------------------------------------
3.0 Layout
--------------------------------------------------------------*/
#primary {
  padding-bottom: 40px;
  padding-top: 40px;
}

.template-fullwidth-stretched #primary, .siteorigin-panels #primary {
  padding: 0;
}
.template-fullwidth-stretched .entry-content, .siteorigin-panels .entry-content {
  margin-bottom: 0px;
}

#secondary {
  padding-bottom: 40px;
  padding-top: 0;
}
@media screen and (min-width: 940px) {
  #secondary {
    padding-top: 40px;
  }
}

.content-area {
  width: 100%;
  float: none;
}
@media screen and (min-width: 940px) {
  .content-area {
    float: left;
  }
}

.sidebar {
  width: 100%;
  float: none;
}
@media screen and (min-width: 940px) {
  .sidebar {
    width: 25.22523%;
    float: left;
  }
}

.no-sidebar .content-area {
  width: 100%;
}

@media screen and (min-width: 940px) {
  .left-sidebar .content-area {
    float: right;
    padding-left: 39px;
    border-left: 1px solid #e9e9e9;
    margin-right: 1px;
    width: 74.77477%;
  }

  .left-sidebar .sidebar {
    padding-right: 39px;
    border-right: 1px solid #e9e9e9;
    margin-right: -1px;
  }

  .right-sidebar .content-area {
    padding-right: 39px;
    border-right: 1px solid #e9e9e9;
    width: 74.77477%;
  }

  .right-sidebar .sidebar {
    padding-left: 39px;
    border-left: 1px solid #e9e9e9;
    margin-left: -1px;
  }
}
/**
Footer widgets
 */
.footer-widgets {
  background: #050505;
}
.footer-widgets.section-padding {
  padding: 70px 0px 35px;
  padding:  4.375rem 0px 2.1875rem;
}
.footer-widgets table {
  border-collapse: collapse;
}
.footer-widgets table > thead > tr > th, .footer-widgets table > thead > tr > td {
  border-width: 1px;
}
.footer-widgets table th, .footer-widgets table td {
  border-color: rgba(233, 233, 233, 0.4);
}
.footer-widgets .widget-title {
  color: #ffffff;
}
.footer-widgets .widget-area .widget_categories li, .footer-widgets .widget-area .widget_archive li, .footer-widgets .widget-area .widget_meta li {
  width: 100% !important;
  float: none;
}
.footer-widgets .widget_recent_entries ul li,
.footer-widgets .widget_recent_comments ul li {
  border-bottom: 0px none;
  padding: 5px 0px;
  margin-bottom: 0px;
}
.footer-widgets .sidebar .widget {
  margin-bottom: 30px;
}

/*--------------------------------------------------------------
4.0 Structure
--------------------------------------------------------------*/
/* Header
------------------------------*/
.site-header {
  line-height: 75px;
  position: relative;
  width: 100%;
  background: #FFFFFF;
  z-index: 1000;
  -webkit-transition: all 1s ease-out;
  /* Safari */
  transition: all .5s ease-out;
  box-shadow: 0 5px 10px 0 rgba(50, 50, 50, 0.06);
}
.site-header.header-fixed {
  top: 0px;
  left: 0px;
  position: fixed;
}
.site-header .custom-logo-transparent {
  display: none;
}
#certificates:before{
	position: unset;
}
#certificates h2{
	text-align: center;
    text-transform: uppercase;
}
.gift-content{
	width: 70%;
	margin: 0 auto;
	display:flex;
}
.gift-img{
	width: 50%;
}
.gift-article{
	width: 50%;
	text-align: justify;
}
.followWrap {
  display: block;
}

.header-full-width .container {
  max-width: auto;
  width: auto;
}
@media screen and (min-width: 940px) {
  .header-full-width .container {
    padding-left: 30px;
    padding-right: 30px;
  }
}

.is-transparent .followWrap {
  z-index: 99;
  width: 100%;
  background: transparent;
  position: absolute;
  top: 0px;
  display: block;
}
.is-transparent .site-header {
  background: transparent;
  position: fixed;
  top: 0px;
}
.is-transparent .site-header.no-sticky {
  position: absolute;
  top: auto;
}
.is-transparent .site-header.no-scroll {
  box-shadow: none;
}
.is-transparent .site-header.no-scroll .has-t-logo .custom-logo-transparent {
  display: inline-block;
}
.is-transparent .site-header.no-scroll .has-t-logo .custom-logo {
  display: none;
}
.is-transparent .site-header.no-scroll #nav-toggle span {
  background-color: #ffffff;
}
.is-transparent .site-header.no-scroll #nav-toggle span::before, .is-transparent .site-header.no-scroll #nav-toggle span::after {
  background-color: #ffffff;
}
.is-transparent .site-header.no-scroll #nav-toggle.nav-is-visible span {
  background-color: transparent;
}
.is-transparent .site-header.header-fixed {
  background: #FFFFFF;
}
.is-transparent .site-header.header-fixed.no-scroll {
  background: transparent;
  box-shadow: none;
}
/* ... */

